# docs/swagger.json
@@ -173,6 +173,56 @@
                 }
             }
         },
+        "/recipes/category/{slug}": {
+            "get": {
+                "description": "Get all recipes paginated by its category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipes"
+                ],
+                "summary": "Get all recipes by Categories",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Category Slug",
+                        "name": "slug",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "OrderBy",
+                        "name": "orderBy",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.CategoryRecipesResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/recipes/origin/{slug}": {
             "get": {
                 "description": "Get all recipes paginated by its origin",
@@ -211,7 +261,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.Response"
+                            "$ref": "#/definitions/types.OriginRecipesResponse"
                         }
                     }
                 }
@@ -251,20 +301,6 @@
         }
     },
     "definitions": {
-        "handlers.Response": {
-            "type": "object",
-            "properties": {
-                "origin": {
-                    "$ref": "#/definitions/models.Origin"
-                },
-                "recipes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Recipe"
-                    }
-                }
-            }
-        },
         "models.Category": {
             "type": "object",
             "properties": {
@@ -349,6 +385,34 @@
                 },
                 "Total_time": {
                     "type": "string"
+                }
+            }
+        },
+        "types.CategoryRecipesResponse": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "$ref": "#/definitions/models.Category"
+                },
+                "recipes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Recipe"
+                    }
+                }
+            }
+        },
+        "types.OriginRecipesResponse": {
+            "type": "object",
+            "properties": {
+                "origin": {
+                    "$ref": "#/definitions/models.Origin"
+                },
+                "recipes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Recipe"
+                    }
                 }
             }
         }
