# main.go
@@ -25,9 +25,11 @@ func handleRequest(DB *sql.DB) {
 	router.HandleFunc("/categories/{slug}", h.GetCategory).Methods("GET")
 	router.HandleFunc("/recipes", h.GetAllRecipes).Methods("GET")
 	router.HandleFunc("/recipes/origin/{slug}", h.GetRecipesByOrigin).Methods("GET")
+	router.HandleFunc("/recipes/category/{slug}", h.GetRecipesByCategory).Methods("GET")
 	router.HandleFunc("/recipes/{recipeId}", h.GetRecipe).Methods("GET")
 	router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
-	log.Fatal(http.ListenAndServe(":8080", router))
+
+	log.Fatal(http.ListenAndServe("127.0.0.1:8080", router))
 }
 
 //	@title			Wenakk API
